[package]
name = "acme2"
description = "A Tokio and OpenSSL based ACMEv2 client."
version = "0.3.0"
authors = ["Luca Casonato <hello@lcas.dev>"]
license = "MIT"
keywords = ["letsencrypt", "acme"]
readme = "README.md"
repository = "https://github.com/lucacasonato/acme2"
edition = "2018"

[dependencies]
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
base64 = "0.13"
hyper = "0.14"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
openssl = "0.10"
tokio = { version = "1.0", features = [ "time", "fs" ] }
tracing = "0.1"
tracing-futures = "0.2"
thiserror = "1.0.24"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
