[package]
name = "acme2-eab"
description = "A Tokio and OpenSSL based ACMEv2 client."
version = "0.5.3"
authors = ["Paul Butler <paulgb@gmail.com0>"]
license = "MIT"
keywords = ["letsencrypt", "acme"]
readme = "README.md"
repository = "https://github.com/paulgb/acme2"
edition = "2018"

[dependencies]
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
base64 = "0.21"
hyper = "0.14"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
openssl = "0.10"
tokio = { version = "1.0", features = [ "time", "fs" ] }
tracing = "0.1"
tracing-futures = "0.2"
thiserror = "1.0.24"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
