[package]
name = "acme2-eab"
description = "A Tokio and OpenSSL based ACMEv2 client."
version = "0.5.4"
authors = ["Paul Butler <paulgb@gmail.com0>"]
license = "MIT"
keywords = ["letsencrypt", "acme"]
readme = "README.md"
repository = "https://github.com/paulgb/acme2"
edition = "2018"

[dependencies]
data-encoding = "2.5.0"
hyper = "0.14"
openssl = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
thiserror = "1.0.24"
tokio = { version = "1.0", features = [ "time", "fs" ] }
tracing = "0.1"
tracing-futures = "0.2"

[dev-dependencies]
anyhow = "1.0.80"
bollard = "0.16.0"
futures-util = "0.3.30"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
